--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -4,9 +4,11 @@ body {
     font-size: 18px;
     line-height: 20px;
 }
-h1,h2,h3 {
+
+h1, h2, h3 {
     margin: 0;
 }
+
 #root {
     width: 960px;
     margin: 0 auto;
@@ -103,6 +105,84 @@ a:hover {
     display: flex;
 }
 
+.folder-album_item-link:hover {
+    cursor: pointer;
+}
+
 .folder-album_item {
     margin: 5px;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .6);
+    z-index: 30;
+}
+
+.modal {
+    position: absolute;
+    background-color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px 60px;
+    z-index: 20;
+}
+
+.close-modal {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3;
+}
+
+.close-modal:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.close-modal:before, .close-modal:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: #333;
+}
+
+.close-modal:before {
+    transform: rotate(45deg);
+}
+
+.close-modal:after {
+    transform: rotate(-45deg);
+}
+
+.prev, .next {
+    margin-top: 20px;
+}
+
+.modal button {
+    padding: 10px 25px;
+    color: #444;
+    font-size: 18px;
+    background-color: cornflowerblue;
+    border-radius: 0;
+    border: none;
+}
+
+.modal button:hover {
+    background-color: #6495ed9e;
+    color: #3a3a3a;
+    cursor: pointer;
+}
+
+.prev {
+    margin-right: 40px;
 }
